[package]
name = "peace"
version = "0.1.0"
authors = ["aprokurov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-interner = "0.7.1"
hashlink = "0.5"
lazy_static = "1.4"
log = "0.4"
derive_more = "0.99"
num = "0.2"
simple_logger = "1.6"
